--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-//Source : https://x.com/muchi_muchi_AI/status/1896827768580849913
-//         https://jsitor.com/xiG6r7PJkI
-
 <!DOCTYPE html>
 <html lang="ja">
-
+<! -- Source : @muchi_muchi_AI
+         https://x.com/muchi_muchi_AI/status/1896827768580849913
+         https://jsitor.com/xiG6r7PJkI -->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
