--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </head>
 
 <body>
-	<a href="https://x.com/muchi_muchi_AI/status/1896827768580849913" target="_blank">引用元 : @muchi_muchi_AI</a>
+	<div><a href="https://x.com/muchi_muchi_AI/status/1896827768580849913" target="_blank">引用元 : @muchi_muchi_AI</a></div>
 	<div class="container">
 		<canvas id="canvas"></canvas>
 		<div class="ui">
