--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<style>
 		body {
 			display: flex;
+			flex-direction: column;
 			justify-content: center;
 			align-items: center;
 			min-height: 100vh;
@@ -150,7 +151,8 @@
 </head>
 
 <body>
-	<div><a href="https://x.com/muchi_muchi_AI/status/1896827768580849913" target="_blank">引用元 : @muchi_muchi_AI</a></div><br>
+	<a href="https://x.com/muchi_muchi_AI/status/1896827768580849913" target="_blank">引用元 : @muchi_muchi_AI</a>
+	<br>
 	<div class="container">
 		<canvas id="canvas"></canvas>
 		<div class="ui">
